--- a/ProductMaintenance/ProductApps/MainWindow.xaml
+++ b/ProductMaintenance/ProductApps/MainWindow.xaml
@@ -18,6 +18,8 @@
         <TextBlock  HorizontalAlignment="Left" Margin="122,235,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
         <Label Content="wrapping cost $5.00" HorizontalAlignment="Left" Margin="46,251,0,0" VerticalAlignment="Top"/>
         <TextBlock HorizontalAlignment="Left" Margin="122,264,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
+        <Label Content="Total Charge After GST (@10%" HorizontalAlignment="Left" Margin="46,282,0,-0.333" Width="194"/>
+        <TextBlock HorizontalAlignment="Left" Margin="263,311,0,-6.333" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
 
 
     </Grid>
